navigation bar added

--- a/src/main/resources/edu/strobl/moodymonday/web/messages/Messages_de.properties
+++ b/src/main/resources/edu/strobl/moodymonday/web/messages/Messages_de.properties
@@ -2,6 +2,11 @@
 Submit=Absenden
 Reset=Reset
 
+#Navigation
+NavEnterMoodState=Neuer Eintrag
+NavMoodStateList=Stimmungsverlauf
+NavSetPassword=Passwort festlegen
+
 #Enter Mood State
 TitleMain=MoodyMonday - Share your Mood
 EnterMoodState=Hier kannst du deinen momentanen Gef\u00fchlszustand eingeben.
