--- a/src/main/resources/edu/strobl/moodymonday/web/messages/Messages_en.properties
+++ b/src/main/resources/edu/strobl/moodymonday/web/messages/Messages_en.properties
@@ -2,6 +2,11 @@
 Submit=Submit
 Reset=Reset
 
+#Navigation
+NavEnterMoodState=New Entry
+NavMoodStateList=Mood Trend
+NavSetPassword=Set Password
+
 #Enter Mood State
 TitleMain=MoodyMonday - Share your Mood
 EnterMoodState=Here you can submit your current state of mood.
